k8s/crawler/deployment-bot.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler-bot
  labels:
    app: crawler
    component: crawler-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
      component: crawler-bot
  template:
    metadata:
      name: crawler-bot
      labels:
        app: crawler
        component: crawler-bot
    spec:
      containers:
      - image: privalovip/crawler-bot:latest
        name: crawler-bot
