k8s/crawler/deployment-rabbitmq.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  labels:
    app: crawler
    component: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
      component: rabbitmq
  template:
    metadata:
      name: rabbitmq
      labels:
        app: crawler
        component: rabbitmq
    spec:
      containers:
      - image: rabbitmq:3
        name: rabbitmq
