k8s/crawler/deployment-ui.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crawler-ui
  labels:
    app: crawler
    component: crawler-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crawler
      component: crawler-ui
  template:
    metadata:
      name: crawler-ui
      labels:
        app: crawler
        component: crawler-ui
    spec:
      containers:
      - image: privalovip/crawler-ui:latest
        name: crawler-ui
