k8s/crawler/service-bot.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler-bot
  labels:
    app: crawler
    component: crawler-bot
spec:
  type:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: crawler
    component: crawler-bot
