k8s/crawler/service-rabbitmq.yml
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app: crawler
    component: rabbitmq
spec:
  type:
  ports:
    - port: 5672
      protocol: TCP
      targetPort: 5672
  selector:
    app: crawler
    component: rabbitmq
