k8s/crawler/service-ui.yml
---
apiVersion: v1
kind: Service
metadata:
  name: crawler-ui
  labels:
    app: crawler
    component: crawler-ui
spec:
  type: LoadBalancer
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: crawler
    component: crawler-ui
